# claude-1337

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LAYOUT.md  LICENSE  PR_BODY.md  README.md  install-plugins.sh  pyproject.toml
1337-experiments/: .gitignore  README.md  pyproject.toml
1337-experiments/experiments/ralph-iteration-effect/: README.md
1337-experiments/experiments/ralph-iteration-effect/src/ralph_iteration_effect/: __init__.py  __main__.py
1337-experiments/implementations/: TEMPLATE.md  imp-001-rigor-is-what-you-want.md
1337-experiments/proposals/: lep-001-rigor-is-what-you-want.md
1337-experiments/src/lab_1337/: cli.py  proposals.py
1337-experiments/src/lab_1337/core/: __init__.py  experiment.py  report.py  runner.py
1337-experiments/src/lab_1337/elc/: __init__.py  implementations.py  machine.py  proposals.py
ace/: README.md  pyproject.toml
ace/src/ace/adapters/in_/: cli.py
ace/src/ace/assets/: default_sources.json
ace/src/ace/domain/: __init__.py  models.py
ace/src/ace/ports/: __init__.py
ace/tests/: test_cli.py  test_git_repository.py
evals/: .gitignore  README.md  main.py  pyproject.toml  sample-suite.json  validate-plugins.sh
evals/configs/: core-1337-comparison.yaml  dev-methodology-comparison.yaml  rust-skill-benchmark.yaml
evals/docs/: eval-fundamentals.md  reference.md  why-evals-matter.md
evals/methodologies/bmad/: SKILL.md
evals/methodologies/gsd/: SKILL.md
evals/methodologies/speckit/: SKILL.md
evals/rubrics/: code-quality.yaml  spec-quality.yaml
evals/src/claude_1337_evals/: __init__.py  cli.py  models.py  report.py  runner.py
evals/src/evals_1337/: __init__.py  cli.py
evals/src/evals_1337/adapters/: __init__.py  anthropic_api.py  claude_agent_sdk.py  registry.py
evals/src/evals_1337/adapters/headless/: __init__.py  agents.py  base.py  commands.py  hooks.py  mcp.py  observer.py  skills.py
evals/src/evals_1337/adapters/simulation/: __init__.py  skills.py
evals/src/evals_1337/core/: __init__.py  benchmark.py  comparison.py  models.py
evals/src/evals_1337/harness/: __init__.py  plugin_harness.py
evals/src/evals_1337/metrics/: __init__.py  classification.py
evals/src/evals_1337/plugins/: __init__.py
evals/src/evals_1337/ports/: __init__.py  observer.py  runner.py  runtime.py
evals/src/evals_1337/reporting/: __init__.py  analysis.py  display.py  export.py
evals/src/evals_1337/targets/: __init__.py  plugins.py  skills.py
evals/src/evals_1337/tracing/: __init__.py  observer.py
evals/suites/: dev-methodology-v1.json  rigorous-v1.json
evals/tests/: __init__.py  conftest.py  test_comparison.py  test_content.py  test_core.py  test_harness.py  test_plugins.py  test_ports.py  test_triggers.py
lab-1337/: CLAUDE.md  README.md  pyproject.toml
lab-1337/agents/: analyst.md  reporter.md
lab-1337/experiments/humaneval/: analyst.py  results-analysis.html  results-analysis.md  results-haiku-20.json  results-haiku-50-analysis.html  results-haiku-50-analysis.md  results-haiku-50.json  results-haiku-fixed.json  results-haiku-full-164.json  results-haiku-hard-30.json  results-test.json  run_humaneval.py
lab-1337/experiments/humaneval/agents/: analyst.md
lab-1337/experiments/lep-001-rigor-is-what-you-want/: README.md  pyproject.toml
lab-1337/experiments/lep-001-rigor-is-what-you-want/results/: pilot-run.json
lab-1337/experiments/lep-001-rigor-is-what-you-want/src/lep_001_rigor_is_what_you_want/: __init__.py  __main__.py  (+2 more)
lab-1337/experiments/ralph-iteration-effect/: pyproject.toml
lab-1337/experiments/rep-001/: README.md
lab-1337/experiments/rep-001/agents/: ralph-iteration.md  self-review.md  single-shot.md
lab-1337/experiments/rep-001/results/: FINDINGS.md  full-run.json  interval-full-run.json  interval-merging-haiku-20260115-191618.json  interval-merging-haiku-20260115-204052.json  interval-merging-opus-20260115-204739.json  text-justify-haiku-20260115-172041.json  text-justify-haiku-20260115-172444.json  text-justify-haiku-20260115-190647.json  text-justify-haiku-20260115-191444.json  text-justify-haiku-20260115-200616.json  text-justify-haiku-20260115-204222.json  text-justify-opus-20260115-193548.json  text-justify-opus-20260115-205024.json  text-justify-sonnet-20260115-172708.json
lab-1337/experiments/rep-001/scenarios/: api-iteration-haiku.yaml  api-iteration-opus.yaml  ralph-file-iteration.yaml
lab-1337/experiments/rep-001/tasks/: interval-merging.yaml  text-justify.yaml
lab-1337/experiments/rep-002/: README.md
lab-1337/experiments/rep-002/conditions/: baseline.md  full-autonomy.md  highly-structured.md  mandate-role.md  mandate-structure.md  mandate-template.md  motivation.md  principle-guided.md  spec-driven.md  what-why-constraints.md
lab-1337/experiments/rep-002/results/: rep-002-v2-pilot_judged.jsonl  rep-002-v2-pilot_judged_reliability.json  rep-002-v3-quick-pilot_judged.jsonl  rep-002-v3-sonnet-signal_judged.jsonl  v2-pilot-analysis.md
lab-1337/experiments/rep-002/scenarios/: discriminating.yaml  pilot.yaml  safe-calc.yaml  stratified-ready.yaml  stratified.yaml  v2-pilot.yaml  v3-autonomy-spectrum.yaml  v3-quick-pilot.yaml  v3-sonnet-signal.yaml  v4-fixed-conditions.yaml
lab-1337/findings/: rep-001-findings.md  rep-002-experiment-status.md  rep-002-findings.md  rep-002-interim-findings.md
lab-1337/implementations/: imp-001-rigor-is-what-you-want.md
lab-1337/proposals/: README.md  TEMPLATE.md  lep-001-rigor-is-what-you-want.md
lab-1337/reps/: TEMPLATE.md  rep-001-rigor-is-what-you-want.md  rep-002-mandates-vs-motivations.md
lab-1337/results/: lep-001-findings.md
lab-1337/rips/: TEMPLATE.md
lab-1337/scripts/: build_swebench_images.py
lab-1337/src/lab/: __init__.py  analyst.py  cli.py  config.py  container.py  evaluation.py  experiment.py  reporter.py
lab-1337/src/lab/adapters/: __init__.py
lab-1337/src/lab/domain/: __init__.py  models.py  services.py  statistics.py
lab-1337/src/lab/evals/: __init__.py  safe_calculator.py
lab-1337/src/lab/ports/: __init__.py
lab-1337/src/lab_1337/: __init__.py
lab-1337/src/lab_1337/elc/: models.py
(+640 files in other folders)
