[project]
name = "agent-1337"
version = "0.1.0"
description = "Cognitive extensions marketplace for effective collaborative intelligence"
readme = "README.md"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["lab-1337", "ace"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
