[project]
name = "lab-1337"
version = "0.1.0"
description = "1337 Experiments Lab - Rigorous experiments for the agentic era"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
lab-1337 = "lab_1337.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lab_1337"]

[tool.uv.workspace]
members = ["experiments/*"]

[tool.uv.sources]
# Workspace packages can reference each other

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
