[project]
name = "ace"
version = "0.1.0"
description = "Agentic Cognitive Extensions - discover, install, create, and publish cognitive extensions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "gitpython>=3.1.0",
]

[project.scripts]
ace = "ace.adapters.in_.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ace"]
