[project]
name = "claude-1337-evals"
version = "0.2.0"
description = "Skill activation testing for claude-1337 marketplace using Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.13",
    "click>=8.3.1",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
]

[project.scripts]
skill-test = "claude_1337_evals.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_1337_evals"]
