[project]
name = "evals-1337"
version = "0.4.0"
description = "Extension evaluation framework for claude-1337 marketplace"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "claude-agent-sdk>=0.1.19",
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
# Observability extras - install with: uv pip install -e ".[observe]"
observe = [
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "arize-phoenix",
    "openinference-instrumentation-anthropic",
]

[project.scripts]
evals-1337 = "evals_1337.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evals_1337"]
