[project]
name = "ralph-iteration-effect"
version = "0.1.0"
description = "A/B test: Does iteration improve outcomes? Single-shot vs Ralph-style looping."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ralph_iteration_effect"]
